<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_app_logo"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="LOGO"
            android:src="@drawable/collabor8_nobg" />

    <TextView
        android:id="@+id/tv_Collabor8title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/pagetitle"
        android:textSize="35sp"
        android:textStyle="bold"
        />


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Collabor8title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30bbbbbb"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="20dp"
        android:hint="@string/name"
        android:padding="20dp"
        android:textColor="@color/lavender"
        android:textColorHint="@color/lavender"
        android:inputType="text" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_moodle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_fullname"

        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:background="#30bbbbbb"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/moodle_id"
        android:padding="20dp"
        android:textColor="@color/lavender"
        android:textColorHint="@color/lavender"
        android:autofillHints="Moodle ID"
        android:inputType="number" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_moodle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30bbbbbb"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/department"
        android:padding="20dp"
        android:textColor="@color/lavender"
        android:textColorHint="@color/lavender"
        android:inputType="text" />

</com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_dept"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30bbbbbb"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawablePadding="20dp"
                android:hint="@string/year"
                android:padding="20dp"
                android:textColor="@color/lavender"
                android:textColorHint="@color/lavender"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_year"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30bbbbbb"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawablePadding="20dp"
                android:hint="@string/div"
                android:padding="20dp"
                android:textColor="@color/lavender"
                android:textColorHint="@color/lavender"
                android:inputType="textCapCharacters" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:counterTextColor="@color/cb8magenta">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_division"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:background="#30bbbbbb"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawablePadding="20dp"
                android:hint="@string/phone"
                android:padding="20dp"
                android:inputType="phone"
                android:textColor="@color/lavender"
                android:textColorHint="@color/lavender"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:helperText="required"
            app:helperTextTextColor="@color/cb8magenta">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_phone"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:background="#30bbbbbb"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="20dp"
                android:hint="@string/email_id"
                android:padding="20dp"
                android:textColor="@color/lavender"
                android:textColorHint="@color/lavender"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            app:helperText=""
            app:helperTextTextColor="@color/cb8magenta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:counterEnabled="true"
            app:counterTextColor="@color/cb8magenta"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:background="#30bbbbbb"
                android:drawableStart="@drawable/ic_baseline_info_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/lavender"
                android:textColorHint="@color/lavender"
                />
        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilRepassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:helperText=""
    app:helperTextTextColor="@color/cb8magenta"
    app:passwordToggleEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etRepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30bbbbbb"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/re_enter_password"
        android:padding="20dp"
        android:inputType="textPassword"
        android:textColor="@color/lavender"
        android:textColorHint="@color/lavender" />
</com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="52dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="381dp"
                android:layout_marginBottom="381dp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/purple_500"
                android:text="@string/signup"
                android:textSize="25sp"
                app:layout_constraintHorizontal_bias="0.476" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>